==> SpaceTeam/rodos/src/bare-metal/stm32f4/hal/hal_spi.cpp <==
#include <new>
#include "rodos.h"
#include "hal/hal_spi.h"
#include "hw_hal_gpio.h"
#include "stm32f4xx_rcc.h"
#include "stm32f4xx_gpio.h"
#include "stm32f4xx_spi.h"
#include "misc.h"					// version V1.8.0
#include "stm32f4xx_dma.h"
#define SPI_IDX_MIN SPI_IDX1
#define SPI_IDX_MAX SPI_IDX6
#define SPI_IDX_MAX SPI_IDX5
#define SPI_IDX_MAX SPI_IDX3

void HW_HAL_SPI::initMembers(SPI_IDX idx, GPIO_PIN sckPin, GPIO_PIN misoPin, GPIO_PIN mosiPin, GPIO_PIN nssPin) {
	this->idx = idx;
	this->initialized = false;

	/* set DMA parameter, which are always the same */
	DMA_InitTypeDef *pDMA_Init = &DMA_InitStructure;
	DMA_StructInit(pDMA_Init);
	pDMA_Init->DMA_MemoryInc = DMA_MemoryInc_Enable;
	pDMA_Init->DMA_PeripheralInc = DMA_PeripheralInc_Disable;
	pDMA_Init->DMA_PeripheralDataSize = DMA_PeripheralDataSize_Byte;
	pDMA_Init->DMA_MemoryDataSize = DMA_MemoryDataSize_Byte;
	pDMA_Init->DMA_Mode = DMA_Mode_Normal;
	pDMA_Init->DMA_Priority = DMA_Priority_High;
	pDMA_Init->DMA_FIFOMode = DMA_FIFOMode_Enable;
	pDMA_Init->DMA_MemoryBurst = DMA_MemoryBurst_Single;
	pDMA_Init->DMA_PeripheralBurst = DMA_PeripheralBurst_Single;


  GPIO_Pin_SCK   = HW_HAL_GPIO::getSTM32Pin(sckPin);
	GPIO_Port_SCK  = HW_HAL_GPIO::getSTM32Port(sckPin);
	GPIO_Pin_MISO  = HW_HAL_GPIO::getSTM32Pin(misoPin);
	GPIO_Pin_NSS  = HW_HAL_GPIO::getSTM32Pin(nssPin);
	GPIO_Port_MISO = HW_HAL_GPIO::getSTM32Port(misoPin);
	GPIO_Pin_MOSI  = HW_HAL_GPIO::getSTM32Pin(mosiPin);
	GPIO_Port_MOSI = HW_HAL_GPIO::getSTM32Port(mosiPin);
	GPIO_Port_NSS = HW_HAL_GPIO::getSTM32Port(nssPin);

	switch(idx){
	case SPI_IDX1:
		SPIx = SPI1;
		DMA_Stream_RX = DMA2_Stream0; // or DMA2_Stream2
		DMA_Stream_TX = DMA2_Stream3; // or DMA2_Stream5
		DMA_Stream_RX_FLAG_TCIFx = DMA_FLAG_TCIF0;
		DMA_Stream_TX_FLAG_TCIFx = DMA_FLAG_TCIF3;
		DMA_Channel_RX = DMA_Channel_3;
		DMA_Channel_TX = DMA_Channel_3;
		GPIO_AF = GPIO_AF_SPI1;
		break;
	case SPI_IDX2:
		SPIx = SPI2;
		DMA_Stream_RX = DMA1_Stream3;
		DMA_Stream_TX = DMA1_Stream4;
		DMA_Stream_RX_FLAG_TCIFx = DMA_FLAG_TCIF3;
		DMA_Stream_TX_FLAG_TCIFx = DMA_FLAG_TCIF4;
		DMA_Channel_RX = DMA_Channel_0;
		DMA_Channel_TX = DMA_Channel_0;
		GPIO_AF = GPIO_AF_SPI2;
		break;
	case SPI_IDX3:
		SPIx = SPI3;
		DMA_Stream_RX = DMA1_Stream0; // or DMA1_Stream2
		DMA_Stream_TX = DMA1_Stream7; // or DMA1_Stream7
		DMA_Stream_RX_FLAG_TCIFx = DMA_FLAG_TCIF0;
		DMA_Stream_TX_FLAG_TCIFx = DMA_FLAG_TCIF7;
		DMA_Channel_RX = DMA_Channel_0;
		DMA_Channel_TX = DMA_Channel_0;
		GPIO_AF = GPIO_AF_SPI3;
		break;
#if defined (STM32F427_437xx) || defined (STM32F429_439xx)  || defined (STM32F411xE)
	case SPI_IDX4:
		SPIx = SPI4;
		DMA_Stream_RX = DMA2_Stream0; // or DMA2_Stream3
		DMA_Stream_TX = DMA2_Stream1; // or DMA2_Stream4
		DMA_Stream_RX_FLAG_TCIFx = DMA_FLAG_TCIF0;
		DMA_Stream_TX_FLAG_TCIFx = DMA_FLAG_TCIF1;
		DMA_Channel_RX = DMA_Channel_4;
		DMA_Channel_TX = DMA_Channel_4;
		GPIO_AF = GPIO_AF_SPI4;
		break;
	case SPI_IDX5:
		SPIx = SPI5;
		DMA_Stream_RX = DMA2_Stream3; // or DMA2_Stream5
		DMA_Stream_TX = DMA2_Stream4; // or DMA2_Stream6
		DMA_Stream_RX_FLAG_TCIFx = DMA_FLAG_TCIF3;
		DMA_Stream_TX_FLAG_TCIFx = DMA_FLAG_TCIF4;
		DMA_Channel_RX = DMA_Channel_2;
		DMA_Channel_TX = DMA_Channel_2;
		GPIO_AF = GPIO_AF_SPI5;
		break;
#endif /* defined (STM32F427_437xx) || defined (STM32F429_439xx)  || defined (STM32F411xE) */
#if defined (STM32F427_437xx) || defined (STM32F429_439xx)
	case SPI_IDX6:
		SPIx = SPI6;
		DMA_Stream_RX = DMA2_Stream6;
		DMA_Stream_TX = DMA2_Stream5;
		DMA_Stream_RX_FLAG_TCIFx = DMA_FLAG_TCIF6;
		DMA_Stream_TX_FLAG_TCIFx = DMA_FLAG_TCIF5;
		DMA_Channel_RX = DMA_Channel_1;
		DMA_Channel_TX = DMA_Channel_1;
		GPIO_AF = GPIO_AF_SPI6;
		break;
#endif /* defined (STM32F427_437xx) || defined (STM32F429_439xx) */
	default:
		RODOS_ERROR("SPI index out of range");
	}

}

int32_t HAL_SPI::init(uint32_t baudrate, bool slave, bool tiMode) {
	context->slave = slave;
	/* enable peripheral clock */
	switch(context->idx){
	case SPI_IDX1:
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_SPI1, ENABLE);
		RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_DMA2, ENABLE); // used by SPI1
		break;
	case SPI_IDX2:
		RCC_APB1PeriphClockCmd(RCC_APB1Periph_SPI2, ENABLE);
		RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_DMA1, ENABLE); // used by SPI2/3
		break;
	case SPI_IDX3:
		RCC_APB1PeriphClockCmd(RCC_APB1Periph_SPI3, ENABLE);
		RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_DMA1, ENABLE); // used by SPI2/3
		break;
#if defined (STM32F427_437xx) || defined (STM32F429_439xx) || defined (STM32F411xE)
  case SPI_IDX4:
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_SPI4, ENABLE);
		RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_DMA2, ENABLE);
		break;
  case SPI_IDX5:
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_SPI5, ENABLE);
		RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_DMA2, ENABLE);
		break;
#endif
#if defined (STM32F427_437xx) || defined (STM32F429_439xx)
  case SPI_IDX6:
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_SPI6, ENABLE);
		RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_DMA2, ENABLE);
		break;
#endif /* defined (STM32F427_437xx) || defined (STM32F429_439xx) */
	default: RODOS_ERROR("SPI index out of range"); return -1;
	}

	/* enable clock for used IO pins */
	if ((context->GPIO_Port_SCK == GPIOA)
			|| (context->GPIO_Port_MISO == GPIOA)
			|| (context->GPIO_Port_MOSI == GPIOA)
			|| (context->GPIO_Port_NSS == GPIOA)){
		RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOA, ENABLE);
	}
	if ((context->GPIO_Port_SCK == GPIOB)
			|| (context->GPIO_Port_MISO == GPIOB)
			|| (context->GPIO_Port_MOSI == GPIOB)
			|| (context->GPIO_Port_NSS == GPIOB)){
		RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOB, ENABLE);
	}
	if ((context->GPIO_Port_SCK == GPIOC)
			|| (context->GPIO_Port_MISO == GPIOC)
			|| (context->GPIO_Port_MOSI == GPIOC)
			|| (context->GPIO_Port_NSS == GPIOC)){
		RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOC, ENABLE);
	}
	if ((context->GPIO_Port_SCK == GPIOD)
			|| (context->GPIO_Port_MISO == GPIOD)
			|| (context->GPIO_Port_MOSI == GPIOD)
			|| (context->GPIO_Port_NSS == GPIOD)){
		RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOD, ENABLE);
	}
	if ((context->GPIO_Port_SCK == GPIOE)
			|| (context->GPIO_Port_MISO == GPIOE)
			|| (context->GPIO_Port_MOSI == GPIOE)
			|| (context->GPIO_Port_NSS == GPIOE)){
		RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOE, ENABLE);
	}
#if !defined (STM32F411xE)
	if ((context->GPIO_Port_SCK == GPIOF)
			|| (context->GPIO_Port_MISO == GPIOF)
			|| (context->GPIO_Port_MOSI == GPIOF)
			|| (context->GPIO_Port_NSS == GPIOF)){
		RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOF, ENABLE);
	}
	if ((context->GPIO_Port_SCK == GPIOG)
			|| (context->GPIO_Port_MISO == GPIOG)
			|| (context->GPIO_Port_MOSI == GPIOG)
			|| (context->GPIO_Port_NSS == GPIOG)){
		RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOG, ENABLE);
	}
#endif /* !defined (STM32F411xE) */

	/* set GPIO parameter which are always the same */
    GPIO_InitTypeDef GPIO_InitStruct;
	GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF;
	GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
	GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_NOPULL;

	/* configure each GPIO */
	GPIO_InitStruct.GPIO_Pin = context->GPIO_Pin_SCK;
	GPIO_Init(context->GPIO_Port_SCK, &GPIO_InitStruct);
	GPIO_InitStruct.GPIO_Pin = context->GPIO_Pin_MISO;
	GPIO_Init(context->GPIO_Port_MISO, &GPIO_InitStruct);
	GPIO_InitStruct.GPIO_Pin = context->GPIO_Pin_MOSI;
	GPIO_Init(context->GPIO_Port_MOSI, &GPIO_InitStruct);
	GPIO_InitStruct.GPIO_Pin = context->GPIO_Pin_NSS;
	GPIO_Init(context->GPIO_Port_NSS, &GPIO_InitStruct);

	/* pin mapping */
	uint16_t GPIO_PinSource_SCK=0;
	uint16_t GPIO_PinSource_MISO=0;
	uint16_t GPIO_PinSource_MOSI=0;
	uint16_t GPIO_PinSource_NSS=0;
	// calc GPIO_PinSourcex from GPIO_Pin_x
	uint32_t tmpGPIO_Pin = context->GPIO_Pin_SCK;
	while (tmpGPIO_Pin >>= 1) GPIO_PinSource_SCK++;
	tmpGPIO_Pin = context->GPIO_Pin_MISO;
	while (tmpGPIO_Pin >>= 1) GPIO_PinSource_MISO++;
	tmpGPIO_Pin = context->GPIO_Pin_MOSI;
	while (tmpGPIO_Pin >>= 1) GPIO_PinSource_MOSI++;
	tmpGPIO_Pin = context->GPIO_Pin_NSS;
	while (tmpGPIO_Pin >>= 1) GPIO_PinSource_NSS++;

	GPIO_PinAFConfig(context->GPIO_Port_SCK, GPIO_PinSource_SCK, context->GPIO_AF);
	GPIO_PinAFConfig(context->GPIO_Port_MISO, GPIO_PinSource_MISO, context->GPIO_AF);
	GPIO_PinAFConfig(context->GPIO_Port_MOSI, GPIO_PinSource_MOSI, context->GPIO_AF);
	GPIO_PinAFConfig(context->GPIO_Port_NSS, GPIO_PinSource_NSS, context->GPIO_AF);

	/* configure SPI in Mode 0
	 * CPOL = 0 --> clock is low when idle
	 * CPHA = 0 --> data is sampled at the first edge
	 */
	SPI_InitTypeDef SPI_InitStruct;
	SPI_InitStruct.SPI_Direction = SPI_Direction_2Lines_FullDuplex; // set to full duplex mode, separate MOSI and MISO lines
	SPI_InitStruct.SPI_DataSize = SPI_DataSize_8b;                  // one packet of data is 8 bits wide
	SPI_InitStruct.SPI_CPOL = SPI_CPOL_Low;                         // clock is low when idle
	SPI_InitStruct.SPI_CPHA = SPI_CPHA_1Edge;                       // data sampled at first edge
	SPI_InitStruct.SPI_BaudRatePrescaler = 0;                       // will be set in setBaudrate()
	SPI_InitStruct.SPI_FirstBit = SPI_FirstBit_MSB;                 // data is transmitted MSB first
	SPI_InitStruct.SPI_NSS = SPI_NSS_Soft; 								 // set the NSS management to internal

	if(slave) {
		SPI_InitStruct.SPI_Mode = SPI_Mode_Slave;                      // transmit in slave mode, NSS pin has to be always high
	} else {
		SPI_InitStruct.SPI_Mode = SPI_Mode_Master;                      // transmit in master mode, NSS pin has to be always high
	}

	SPI_Init(context->SPIx, &SPI_InitStruct);

	context->setBaudrate(baudrate);

	SPI_Cmd(context->SPIx, ENABLE);
	if ( slave && tiMode ) {
	    SPI_TIModeCmd(context->SPIx, ENABLE);
	}
	context->initialized = true;
	return 0;
}

int32_t HAL_SPI::read(void* recBuf, size_t maxLen) {
	if(!context->slave)
		return writeRead(recBuf, maxLen, recBuf, maxLen);

	if(!context->initialized) return -1;

	/* configure receive DMA */
	DMA_InitTypeDef *pDMA_Init = &context->DMA_InitStructure;
	pDMA_Init->DMA_PeripheralBaseAddr = (uint32_t) &(context->SPIx->DR);
	pDMA_Init->DMA_Channel = context->DMA_Channel_RX;
	pDMA_Init->DMA_DIR = DMA_DIR_PeripheralToMemory;
	pDMA_Init->DMA_FIFOThreshold = DMA_FIFOThreshold_Full;
	pDMA_Init->DMA_Memory0BaseAddr = (uint32_t)recBuf;
	pDMA_Init->DMA_BufferSize = static_cast<uint32_t>(maxLen);
	DMA_Init(context->DMA_Stream_RX, pDMA_Init);
	DMA_ITConfig(context->DMA_Stream_RX, DMA_IT_TC, DISABLE);
	DMA_Cmd(context->DMA_Stream_RX, ENABLE);
	SPI_I2S_DMACmd(context->SPIx, SPI_I2S_DMAReq_Rx, ENABLE);

	while (!DMA_GetFlagStatus(context->DMA_Stream_RX, context->DMA_Stream_RX_FLAG_TCIFx )){}
	DMA_ClearFlag(context->DMA_Stream_RX, context->DMA_Stream_RX_FLAG_TCIFx );

	context->waitOnTransferReady();

	SPI_I2S_DMACmd(context->SPIx, SPI_I2S_DMAReq_Rx | SPI_I2S_DMAReq_Tx, DISABLE);

	upCallReadFinished();

	return static_cast<int32_t>(maxLen);

/* The following read-implementation works, but generates spi clock for a few more bytes than requested,
 * because the RXONLY-flag is cleared to late.
 */
//	if(!context->initialized) return -1;
//
//	context->waitOnTransferReady();
//
//	// DMA_DeInit(context->DMA_Stream_RX); // only for debugging
//
//	DMA_InitTypeDef *pDMA_Init = &context->DMA_InitStructure;
//	pDMA_Init->DMA_PeripheralBaseAddr = (uint32_t) &(context->SPIx->DR);
//	pDMA_Init->DMA_Channel = context->DMA_Channel_RX;
//	pDMA_Init->DMA_DIR = DMA_DIR_PeripheralToMemory;
//	pDMA_Init->DMA_FIFOThreshold = DMA_FIFOThreshold_Full;
//	pDMA_Init->DMA_Memory0BaseAddr = (uint32_t) recBuf;
//	pDMA_Init->DMA_BufferSize = maxLen;
//	DMA_Init(context->DMA_Stream_RX, pDMA_Init);
//
//	DMA_ITConfig(context->DMA_Stream_RX, DMA_IT_TC, DISABLE);
//
//	DMA_Cmd(context->DMA_Stream_RX, ENABLE);
//	SPI_I2S_DMACmd(context->SPIx, SPI_I2S_DMAReq_Rx, ENABLE);
//	/* enable rx only mode -> otherwise no clock will be generated and nothing will be received */
//	context->SPIx->CR1 |= SPI_CR1_RXONLY;
//	context->SPIx->CR1 &= ~(SPI_CR1_RXONLY );
//
//	/* poll transfer complete flag */
//	while (DMA_GetFlagStatus(context->DMA_Stream_RX, context->DMA_Stream_RX_FLAG_TCIFx ) == RESET) {}
//	DMA_ClearFlag(context->DMA_Stream_RX, context->DMA_Stream_RX_FLAG_TCIFx );
//
//	context->waitOnTransferReady();
//
//	context->SPIx->CR1 &= ~(SPI_CR1_RXONLY ); // clear RXONLY flag to stop generation of spi clock
//
//	SPI_I2S_DMACmd(context->SPIx, SPI_I2S_DMAReq_Rx, DISABLE);
//
//  upCallReadFinished();
//
//	return maxLen;
}

int32_t HAL_SPI::writeRead(const void* sendBuf, size_t len, void* recBuf, size_t maxLen) {

	if(!context->initialized) return -1;

	context->waitOnTransferReady();

	DMA_InitTypeDef *pDMA_Init = &context->DMA_InitStructure;

	/* configure transmit DMA */
	pDMA_Init->DMA_PeripheralBaseAddr = (uint32_t) &(context->SPIx ->DR);
	pDMA_Init->DMA_Channel = context->DMA_Channel_TX;
	pDMA_Init->DMA_DIR = DMA_DIR_MemoryToPeripheral;
	pDMA_Init->DMA_FIFOThreshold = DMA_FIFOThreshold_HalfFull;
	pDMA_Init->DMA_Memory0BaseAddr = (uint32_t) sendBuf;
	pDMA_Init->DMA_BufferSize = len;
	DMA_Init(context->DMA_Stream_TX, pDMA_Init);

	/* configure receive DMA */
	pDMA_Init->DMA_PeripheralBaseAddr = (uint32_t) &(context->SPIx->DR);
	pDMA_Init->DMA_Channel = context->DMA_Channel_RX;
	pDMA_Init->DMA_DIR = DMA_DIR_PeripheralToMemory;
	pDMA_Init->DMA_FIFOThreshold = DMA_FIFOThreshold_Full;
	pDMA_Init->DMA_Memory0BaseAddr = (uint32_t) recBuf; /// (uint32_t)&SPI_MASTER_Buffer_Rx->preamble;
	pDMA_Init->DMA_BufferSize = maxLen;
	DMA_Init(context->DMA_Stream_RX, pDMA_Init);

	DMA_ITConfig(context->DMA_Stream_RX, DMA_IT_TC, DISABLE);
	DMA_ITConfig(context->DMA_Stream_TX, DMA_IT_TC, DISABLE);

	/*start TX/RX*/
	DMA_Cmd(context->DMA_Stream_RX, ENABLE);
	DMA_Cmd(context->DMA_Stream_TX, ENABLE);
	SPI_I2S_DMACmd(context->SPIx, SPI_I2S_DMAReq_Rx | SPI_I2S_DMAReq_Tx, ENABLE);

	while (!DMA_GetFlagStatus(context->DMA_Stream_TX, context->DMA_Stream_TX_FLAG_TCIFx )){}
	DMA_ClearFlag(context->DMA_Stream_TX, context->DMA_Stream_TX_FLAG_TCIFx);

	if (maxLen > len){
	    // start sending dummy bytes using recBuf to generate spi clock for reception of requested bytes
	    pDMA_Init->DMA_PeripheralBaseAddr = (uint32_t) &(context->SPIx ->DR);
	    pDMA_Init->DMA_Channel = context->DMA_Channel_TX;
	    pDMA_Init->DMA_DIR = DMA_DIR_MemoryToPeripheral;
	    pDMA_Init->DMA_FIFOThreshold = DMA_FIFOThreshold_HalfFull;
	    pDMA_Init->DMA_Memory0BaseAddr = (uint32_t) recBuf;
	    pDMA_Init->DMA_BufferSize = maxLen-len;
	    DMA_Init(context->DMA_Stream_TX, pDMA_Init);
        DMA_Cmd(context->DMA_Stream_TX, ENABLE);
        SPI_I2S_DMACmd(context->SPIx, SPI_I2S_DMAReq_Tx, ENABLE);
        while (!DMA_GetFlagStatus(context->DMA_Stream_TX, context->DMA_Stream_TX_FLAG_TCIFx )){}
        DMA_ClearFlag(context->DMA_Stream_TX, context->DMA_Stream_TX_FLAG_TCIFx);
	}

	while (!DMA_GetFlagStatus(context->DMA_Stream_RX, context->DMA_Stream_RX_FLAG_TCIFx )){}
	DMA_ClearFlag(context->DMA_Stream_RX, context->DMA_Stream_RX_FLAG_TCIFx );

	context->waitOnTransferReady();

	/*end TX/RX*/
	SPI_I2S_DMACmd(context->SPIx, SPI_I2S_DMAReq_Rx | SPI_I2S_DMAReq_Tx, DISABLE);

	upCallReadFinished();

	return static_cast<int32_t>(maxLen);
}
