==> SpaceTeam/rodos/src/bare-metal/efr32fg1p/hal/hal_spi.cpp <==
#include <new>
#include "rodos.h"
#include "hal/hal_spi.h"
#include "hw_hal_gpio.h"
#include "em_device.h"
#include "em_chip.h"
#include "em_cmu.h"
#include "em_gpio.h"
#include "em_usart.h"
#define SPI_IDX_MIN SPI_IDX0
#define SPI_IDX_MAX SPI_IDX3

void HW_HAL_SPI::initMembers(SPI_IDX idx, GPIO_PIN sckPin, GPIO_PIN misoPin, GPIO_PIN mosiPin, GPIO_PIN nssPin) {

  this->initialized = false;
	this->idx = idx;
  config.enable  = usartDisable;
  SPIx = NULL;

	switch(idx){
	  case SPI_IDX0:
	    SPIx = USART0;
	    break;

	  case SPI_IDX1:
	    SPIx = USART1;
	    break;

	  case SPI_IDX2:
      SPIx = USART2;
  		break;

	  case SPI_IDX3:
      SPIx = USART3;
  		break;

	  default:
	    RODOS_ERROR("SPI index out of range");
	    return;
	}

  GPIO_Pin_SCK   = HW_HAL_GPIO::getEFR32Pin(sckPin);
	GPIO_Port_SCK  = HW_HAL_GPIO::getEFR32Port(sckPin);

	GPIO_Pin_MISO  = HW_HAL_GPIO::getEFR32Pin(misoPin);
	GPIO_Port_MISO = HW_HAL_GPIO::getEFR32Port(misoPin);

	GPIO_Pin_NSS  = HW_HAL_GPIO::getEFR32Pin(nssPin);
	GPIO_Port_NSS = HW_HAL_GPIO::getEFR32Port(nssPin);

	GPIO_Pin_MOSI  = HW_HAL_GPIO::getEFR32Pin(mosiPin);
	GPIO_Port_MOSI = HW_HAL_GPIO::getEFR32Port(mosiPin);
}

int32_t HAL_SPI::init(uint32_t baudrate, bool slave, bool tiMode) {       

    context->enableClocks();

    /*
	  usartClockMode0 	-Clock idle low, sample on rising edge.
	  usartClockMode1 	-Clock idle low, sample on falling edge.
	  usartClockMode2 	-Clock idle high, sample on falling edge.
	  usartClockMode3 	-Clock idle high, sample on rising edge.
     */
  	context->config               = USART_INITSYNC_DEFAULT;
  	context->config.baudrate      = baudrate;
    context->config.master        = true;
    context->config.autoCsEnable  = false;
    context->config.clockMode     = usartClockMode3;
    context->config.msbf          = true;
    context->config.enable        = usartEnable;
    // USART_InitSync resets complete USART module
    // -> special register-settings (like "ROUTELOC") must
    //    be set afterwards!!!
    USART_InitSync(context->SPIx, &(context->config));

    /* pin routing */
  	switch(context->idx){
  	  case SPI_IDX0:
        USART0->ROUTELOC0 = (USART_ROUTELOC0_CLKLOC_LOC0) | // US0_CLK       on location 0 = PA2
                            (USART_ROUTELOC0_TXLOC_LOC0)  | // US0_TX (MOSI) on location 0 = PA0
                            (USART_ROUTELOC0_RXLOC_LOC0);   // US0_RX (MISO) on location 0 = PA1
  	    break;

      case SPI_IDX1:
//        USART1->ROUTELOC0 = (USART_ROUTELOC0_CLKLOC_LOC3) | // US1_CLK       on location 3 = PA5
//                            (USART_ROUTELOC0_TXLOC_LOC3)  | // US1_TX (MOSI) on location 3 = PA3
//                            (USART_ROUTELOC0_RXLOC_LOC3);   // US1_RX (MISO) on location 3 = PA4
        USART1->ROUTELOC0 = (USART_ROUTELOC0_CLKLOC_LOC11) | // US1_CLK       on location 11 = PC8
                            (USART_ROUTELOC0_TXLOC_LOC11)  | // US1_TX (MOSI) on location 11 = PC6
                            (USART_ROUTELOC0_RXLOC_LOC11);   // US1_RX (MISO) on location 11 = PC7
        break;

      case SPI_IDX2:
        USART2->ROUTELOC0 = (USART_ROUTELOC0_CLKLOC_LOC16) | // US2_CLK       on location 16 = PF5
                            (USART_ROUTELOC0_TXLOC_LOC16)  | // US2_TX (MOSI) on location 16 = PF3
                            (USART_ROUTELOC0_RXLOC_LOC16);   // US2_RX (MISO) on location 16 = PF4
        break;

      case SPI_IDX3:
        USART3->ROUTELOC0 = (USART_ROUTELOC0_CLKLOC_LOC18) | // US3_CLK       on location 18 = PC2
                            (USART_ROUTELOC0_TXLOC_LOC18)  | // US3_TX (MOSI) on location 18 = PC0
                            (USART_ROUTELOC0_RXLOC_LOC18);   // US3_RX (MISO) on location 18 = PC1
        break;

      default:
        RODOS_ERROR("SPI index out of range");
        return -1;
  	}

  	context->SPIx->ROUTEPEN = USART_ROUTEPEN_CLKPEN | USART_ROUTEPEN_TXPEN | USART_ROUTEPEN_RXPEN;

  	/* configure GPIOs */
    GPIO_PinModeSet(context->GPIO_Port_SCK, context->GPIO_Pin_SCK, gpioModePushPull, 1);
    GPIO_PinModeSet(context->GPIO_Port_MOSI, context->GPIO_Pin_MOSI, gpioModePushPull, 0);
    GPIO_PinModeSet(context->GPIO_Port_MISO, context->GPIO_Pin_MISO, gpioModeInput, 0); // "out"-value sets filter on/off

  	context->initialized = true;
  	return 0;
}

int32_t HAL_SPI::writeRead(const void* sendBuf, size_t len, void* recBuf, size_t maxLen) {
	if(!context->initialized) return -1;
	
	uint8_t *pTx = (uint8_t*)sendBuf;
	uint8_t *pRx = (uint8_t*)recBuf;
	uint8_t rxVal = 0;
	size_t rxCnt = maxLen;

	/* transmit tx buffer and receive at the same time */
	unsigned int i = 0;
	for(i = 0; i < len; i++){
	    rxVal = USART_SpiTransfer(context->SPIx, *pTx);
	    pTx++;
	    if (rxCnt) {
	        *pRx = rxVal;
	        pRx++;
	        rxCnt--;
	    }
	}

	/* generate SCLK by sending dummy bytes to complete read request */
	while (rxCnt){
	    *pRx = USART_SpiTransfer(context->SPIx, 0);
	    pRx++;
	    rxCnt--;
	}

	return static_cast<int32_t>(maxLen);
}

int32_t HAL_SPI::read(void* recBuf, size_t maxLen) {

	if(!context->initialized) return -1;
 
  uint8_t *pRx = (uint8_t*)recBuf;
  size_t rxCnt = maxLen;

  /* generate SCLK by sending dummy bytes */
  while (rxCnt){
      *pRx = USART_SpiTransfer(context->SPIx, 0);
      pRx++;
      rxCnt--;
  }

	return static_cast<int32_t>(maxLen);
}
